# YouTube-Notemaker

./: .gitignore  README.md  app.py  cookies.txt  main.py  pyproject.toml
.claude/: settings.local.json
src/youtube_notemake/: __init__.py  ai_summarizer.py  audio_transcriber.py  batch_processor.py  cache_manager.py  exporter.py  markdown_generator.py  text_processor.py  transcript.py  youtube_handler.py  ytdlp_config.py
