[project]
name = "youtube-notemake"
version = "0.2.0"
description = "YouTube video transcription tool with Streamlit UI and AI features"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.1.0",
    "python-dateutil>=2.8.2",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
]
